# compiler-lab

./: .gitignore  PROJECT_PRESENTATION.md  README.md
BACKEND/: CMakeLists.txt  README.md
BACKEND/data/grammars/: grammar.txt
BACKEND/data/test_inputs/: in.txt
BACKEND/src/: main.cpp
BACKEND/src/api/: handlers.cpp  handlers.h  routes.cpp  routes.h
BACKEND/src/core/: lr0_parser.cpp  lr0_parser.h  regex_automata.cpp  regex_automata.h  slr1_parser.cpp  slr1_parser.h
FRONTEND/: index.html
FRONTEND/src/: App.vue
FRONTEND/src/assets/: main.css
FRONTEND/src/router/: index.ts
FRONTEND/src/services/: api.ts
FRONTEND/src/stores/: compiler.ts
FRONTEND/src/views/: AboutView.vue  HomeView.vue  LR0View.vue  RegexView.vue  SLR1View.vue
